Fixed sticky nav being covered

--- a/public/src/components/Header/Header.css
+++ b/public/src/components/Header/Header.css
@@ -5,6 +5,7 @@
 	padding-left: 3.2rem;
 	padding-right: 3.2rem;
 	height: 12rem;
+	z-index: 100;
 }
 
 @media (max-width: 47.99em) {
